# os_unix_myinit

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  runme.sh
src/: config_reading.c  config_reading.h  daemonization.c  daemonization.h  logger.c  logger.h  main.c  sub_processes.c  sub_processes.h  utils.c  utils.h  waitpid_prototype.c
